debugging/wrong-gateway-port.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: online-boutique
spec:
  selector:
    # use Istio default gateway implementation
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: online-boutique-tls-credential
      hosts:
        - "marketplace.boutiquestore.com"
    - port:
        number: 18080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
